// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MobileAppConnection it shows a QR code if the app isn't already connected 1`] = `
<div>
  <h3>
    Mobile App Connection
  </h3>
  <div
    class="css-gjl87o-vertical-group"
    style="width: 100%; height: 100%;"
  >
    <div
      class="css-gxt817-layoutChildrenWrapper"
    >
      <div
        class="container"
      >
        <div
          class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--shadowed css-1x53p5e--withBackGround container__box"
        >
          <div
            class="css-1yjvs5a"
          >
            Loading...
             
            <div
              class="css-1tqtz24"
              data-testid="Spinner"
            >
              <i
                aria-label="loading spinner"
                class="fa fa-spinner fa-spin fa-spin"
              />
            </div>
          </div>
        </div>
        <div
          class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--shadowed css-1x53p5e--withBackGround container__box"
        >
          <div
            class="css-gjl87o-vertical-group"
            style="width: 100%; height: 100%;"
          >
            <div
              class="css-12oo3x0-layoutChildrenWrapper"
            >
              <span
                class="css-77ouhj--primary css-77ouhj--medium css-77ouhj--strong css-1287p17"
              >
                Download
              </span>
            </div>
            <div
              class="css-12oo3x0-layoutChildrenWrapper"
            >
              <span
                class="css-77ouhj--primary css-77ouhj--medium css-1287p17"
              >
                The Grafana OnCall app is available on both the App Store and Google Play Store.
              </span>
            </div>
            <div
              class="css-12oo3x0-layoutChildrenWrapper"
            >
              <div
                class="css-gjl87o-vertical-group"
                style="width: 100%; height: 100%;"
              >
                <div
                  class="css-gxt817-layoutChildrenWrapper"
                >
                  <a
                    href="https://apps.apple.com/us/app/grafana-oncall-preview/id1669759048"
                    rel="noreferrer"
                    style="width: 100%;"
                    target="_blank"
                  >
                    <div
                      class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--fullWidth css-1x53p5e--withBackGround css-1x53p5e--hover icon-block"
                    >
                      <img
                        alt="Apple"
                        class="icon"
                        src="[object Object]"
                      />
                      <span
                        class="css-77ouhj--primary css-77ouhj--medium icon-text css-1287p17"
                      >
                        iOS
                      </span>
                    </div>
                  </a>
                </div>
                <div
                  class="css-gxt817-layoutChildrenWrapper"
                >
                  <a
                    href="https://play.google.com/store/apps/details?id=com.grafana.oncall.prod"
                    rel="noreferrer"
                    style="width: 100%;"
                    target="_blank"
                  >
                    <div
                      class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--fullWidth css-1x53p5e--hover icon-block"
                    >
                      <img
                        alt="Play Store"
                        class="icon"
                        src="[object Object]"
                      />
                      <span
                        class="css-77ouhj--primary css-77ouhj--medium icon-text css-1287p17"
                      >
                        Android
                      </span>
                    </div>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MobileAppConnection it shows a loading message if it is currently disconnecting 1`] = `
<div>
  <h3>
    Mobile App Connection
  </h3>
  <div
    class="css-gjl87o-vertical-group"
    style="width: 100%; height: 100%;"
  >
    <div
      class="css-gxt817-layoutChildrenWrapper"
    >
      <div
        class="container"
      >
        <div
          class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--shadowed css-1x53p5e--withBackGround container__box"
        >
          <div
            class="css-1yjvs5a"
          >
            Loading...
             
            <div
              class="css-1tqtz24"
              data-testid="Spinner"
            >
              <i
                aria-label="loading spinner"
                class="fa fa-spinner fa-spin fa-spin"
              />
            </div>
          </div>
        </div>
        <div
          class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--shadowed css-1x53p5e--withBackGround container__box"
        >
          <div
            class="css-gjl87o-vertical-group"
            style="width: 100%; height: 100%;"
          >
            <div
              class="css-12oo3x0-layoutChildrenWrapper"
            >
              <span
                class="css-77ouhj--primary css-77ouhj--medium css-77ouhj--strong css-1287p17"
              >
                Download
              </span>
            </div>
            <div
              class="css-12oo3x0-layoutChildrenWrapper"
            >
              <span
                class="css-77ouhj--primary css-77ouhj--medium css-1287p17"
              >
                The Grafana OnCall app is available on both the App Store and Google Play Store.
              </span>
            </div>
            <div
              class="css-12oo3x0-layoutChildrenWrapper"
            >
              <div
                class="css-gjl87o-vertical-group"
                style="width: 100%; height: 100%;"
              >
                <div
                  class="css-gxt817-layoutChildrenWrapper"
                >
                  <a
                    href="https://apps.apple.com/us/app/grafana-oncall-preview/id1669759048"
                    rel="noreferrer"
                    style="width: 100%;"
                    target="_blank"
                  >
                    <div
                      class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--fullWidth css-1x53p5e--withBackGround css-1x53p5e--hover icon-block"
                    >
                      <img
                        alt="Apple"
                        class="icon"
                        src="[object Object]"
                      />
                      <span
                        class="css-77ouhj--primary css-77ouhj--medium icon-text css-1287p17"
                      >
                        iOS
                      </span>
                    </div>
                  </a>
                </div>
                <div
                  class="css-gxt817-layoutChildrenWrapper"
                >
                  <a
                    href="https://play.google.com/store/apps/details?id=com.grafana.oncall.prod"
                    rel="noreferrer"
                    style="width: 100%;"
                    target="_blank"
                  >
                    <div
                      class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--fullWidth css-1x53p5e--hover icon-block"
                    >
                      <img
                        alt="Play Store"
                        class="icon"
                        src="[object Object]"
                      />
                      <span
                        class="css-77ouhj--primary css-77ouhj--medium icon-text css-1287p17"
                      >
                        Android
                      </span>
                    </div>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MobileAppConnection it shows a loading message if it is currently fetching the QR code 1`] = `
<div>
  <h3>
    Mobile App Connection
  </h3>
  <div
    class="css-gjl87o-vertical-group"
    style="width: 100%; height: 100%;"
  >
    <div
      class="css-gxt817-layoutChildrenWrapper"
    >
      <div
        class="container"
      >
        <div
          class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--shadowed css-1x53p5e--withBackGround container__box"
        >
          <div
            class="css-1yjvs5a"
          >
            Loading...
             
            <div
              class="css-1tqtz24"
              data-testid="Spinner"
            >
              <i
                aria-label="loading spinner"
                class="fa fa-spinner fa-spin fa-spin"
              />
            </div>
          </div>
        </div>
        <div
          class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--shadowed css-1x53p5e--withBackGround container__box"
        >
          <div
            class="css-gjl87o-vertical-group"
            style="width: 100%; height: 100%;"
          >
            <div
              class="css-12oo3x0-layoutChildrenWrapper"
            >
              <span
                class="css-77ouhj--primary css-77ouhj--medium css-77ouhj--strong css-1287p17"
              >
                Download
              </span>
            </div>
            <div
              class="css-12oo3x0-layoutChildrenWrapper"
            >
              <span
                class="css-77ouhj--primary css-77ouhj--medium css-1287p17"
              >
                The Grafana OnCall app is available on both the App Store and Google Play Store.
              </span>
            </div>
            <div
              class="css-12oo3x0-layoutChildrenWrapper"
            >
              <div
                class="css-gjl87o-vertical-group"
                style="width: 100%; height: 100%;"
              >
                <div
                  class="css-gxt817-layoutChildrenWrapper"
                >
                  <a
                    href="https://apps.apple.com/us/app/grafana-oncall-preview/id1669759048"
                    rel="noreferrer"
                    style="width: 100%;"
                    target="_blank"
                  >
                    <div
                      class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--fullWidth css-1x53p5e--withBackGround css-1x53p5e--hover icon-block"
                    >
                      <img
                        alt="Apple"
                        class="icon"
                        src="[object Object]"
                      />
                      <span
                        class="css-77ouhj--primary css-77ouhj--medium icon-text css-1287p17"
                      >
                        iOS
                      </span>
                    </div>
                  </a>
                </div>
                <div
                  class="css-gxt817-layoutChildrenWrapper"
                >
                  <a
                    href="https://play.google.com/store/apps/details?id=com.grafana.oncall.prod"
                    rel="noreferrer"
                    style="width: 100%;"
                    target="_blank"
                  >
                    <div
                      class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--fullWidth css-1x53p5e--hover icon-block"
                    >
                      <img
                        alt="Play Store"
                        class="icon"
                        src="[object Object]"
                      />
                      <span
                        class="css-77ouhj--primary css-77ouhj--medium icon-text css-1287p17"
                      >
                        Android
                      </span>
                    </div>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MobileAppConnection it shows a warning when cloud is not connected 1`] = `
<div>
  <div
    class="css-gjl87o-vertical-group"
    style="width: 100%; height: 100%;"
  >
    <div
      class="css-12oo3x0-layoutChildrenWrapper"
    >
      <span
        class="css-77ouhj--secondary css-77ouhj--medium css-1287p17"
      >
        Please connect Grafana Cloud OnCall to use the mobile app
      </span>
    </div>
    <div
      class="css-12oo3x0-layoutChildrenWrapper"
    >
      <a
        class="css-1xyvdh3"
        href="/a/grafana-oncall-app/cloud"
      >
        <button
          class="css-8b29hm-button"
          type="button"
        >
          <div
            class="css-1j2891d-Icon"
          />
          <span
            class="css-1riaxdn"
          >
            Connect Grafana Cloud OnCall
          </span>
        </button>
      </a>
    </div>
  </div>
</div>
`;

exports[`MobileAppConnection it shows an error message if there was an error disconnecting the mobile app 1`] = `
<div>
  <h3>
    Mobile App Connection
  </h3>
  <div
    class="css-gjl87o-vertical-group"
    style="width: 100%; height: 100%;"
  >
    <div
      class="css-gxt817-layoutChildrenWrapper"
    >
      <div
        class="container"
      >
        <div
          class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--shadowed css-1x53p5e--withBackGround container__box"
        >
          <span
            class="css-77ouhj--primary css-77ouhj--medium css-1287p17"
          >
            There was an error disconnecting your mobile app. Please try again.
          </span>
        </div>
        <div
          class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--shadowed css-1x53p5e--withBackGround container__box"
        >
          <div
            class="css-gjl87o-vertical-group"
            style="width: 100%; height: 100%;"
          >
            <div
              class="css-12oo3x0-layoutChildrenWrapper"
            >
              <span
                class="css-77ouhj--primary css-77ouhj--medium css-77ouhj--strong css-1287p17"
              >
                Download
              </span>
            </div>
            <div
              class="css-12oo3x0-layoutChildrenWrapper"
            >
              <span
                class="css-77ouhj--primary css-77ouhj--medium css-1287p17"
              >
                The Grafana OnCall app is available on both the App Store and Google Play Store.
              </span>
            </div>
            <div
              class="css-12oo3x0-layoutChildrenWrapper"
            >
              <div
                class="css-gjl87o-vertical-group"
                style="width: 100%; height: 100%;"
              >
                <div
                  class="css-gxt817-layoutChildrenWrapper"
                >
                  <a
                    href="https://apps.apple.com/us/app/grafana-oncall-preview/id1669759048"
                    rel="noreferrer"
                    style="width: 100%;"
                    target="_blank"
                  >
                    <div
                      class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--fullWidth css-1x53p5e--withBackGround css-1x53p5e--hover icon-block"
                    >
                      <img
                        alt="Apple"
                        class="icon"
                        src="[object Object]"
                      />
                      <span
                        class="css-77ouhj--primary css-77ouhj--medium icon-text css-1287p17"
                      >
                        iOS
                      </span>
                    </div>
                  </a>
                </div>
                <div
                  class="css-gxt817-layoutChildrenWrapper"
                >
                  <a
                    href="https://play.google.com/store/apps/details?id=com.grafana.oncall.prod"
                    rel="noreferrer"
                    style="width: 100%;"
                    target="_blank"
                  >
                    <div
                      class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--fullWidth css-1x53p5e--hover icon-block"
                    >
                      <img
                        alt="Play Store"
                        class="icon"
                        src="[object Object]"
                      />
                      <span
                        class="css-77ouhj--primary css-77ouhj--medium icon-text css-1287p17"
                      >
                        Android
                      </span>
                    </div>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`MobileAppConnection it shows an error message if there was an error fetching the QR code 1`] = `
<div>
  <h3>
    Mobile App Connection
  </h3>
  <div
    class="css-gjl87o-vertical-group"
    style="width: 100%; height: 100%;"
  >
    <div
      class="css-gxt817-layoutChildrenWrapper"
    >
      <div
        class="container"
      >
        <div
          class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--shadowed css-1x53p5e--withBackGround container__box"
        >
          <span
            class="css-77ouhj--primary css-77ouhj--medium css-1287p17"
          >
            There was an error fetching your QR code. Please try again.
          </span>
        </div>
        <div
          class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--shadowed css-1x53p5e--withBackGround container__box"
        >
          <div
            class="css-gjl87o-vertical-group"
            style="width: 100%; height: 100%;"
          >
            <div
              class="css-12oo3x0-layoutChildrenWrapper"
            >
              <span
                class="css-77ouhj--primary css-77ouhj--medium css-77ouhj--strong css-1287p17"
              >
                Download
              </span>
            </div>
            <div
              class="css-12oo3x0-layoutChildrenWrapper"
            >
              <span
                class="css-77ouhj--primary css-77ouhj--medium css-1287p17"
              >
                The Grafana OnCall app is available on both the App Store and Google Play Store.
              </span>
            </div>
            <div
              class="css-12oo3x0-layoutChildrenWrapper"
            >
              <div
                class="css-gjl87o-vertical-group"
                style="width: 100%; height: 100%;"
              >
                <div
                  class="css-gxt817-layoutChildrenWrapper"
                >
                  <a
                    href="https://apps.apple.com/us/app/grafana-oncall-preview/id1669759048"
                    rel="noreferrer"
                    style="width: 100%;"
                    target="_blank"
                  >
                    <div
                      class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--fullWidth css-1x53p5e--withBackGround css-1x53p5e--hover icon-block"
                    >
                      <img
                        alt="Apple"
                        class="icon"
                        src="[object Object]"
                      />
                      <span
                        class="css-77ouhj--primary css-77ouhj--medium icon-text css-1287p17"
                      >
                        iOS
                      </span>
                    </div>
                  </a>
                </div>
                <div
                  class="css-gxt817-layoutChildrenWrapper"
                >
                  <a
                    href="https://play.google.com/store/apps/details?id=com.grafana.oncall.prod"
                    rel="noreferrer"
                    style="width: 100%;"
                    target="_blank"
                  >
                    <div
                      class="css-1x53p5e css-1x53p5e--bordered css-1x53p5e--fullWidth css-1x53p5e--hover icon-block"
                    >
                      <img
                        alt="Play Store"
                        class="icon"
                        src="[object Object]"
                      />
                      <span
                        class="css-77ouhj--primary css-77ouhj--medium icon-text css-1287p17"
                      >
                        Android
                      </span>
                    </div>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
